--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
     "prettier-plugin-tailwindcss": "^0.1.10",
     "tailwindcss": "^3.0.24",
     "vite": "^2.9.7"
+  },
+  "dependencies": {
+    "flowbite": "^1.4.5"
   }
 }
