--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
+    "serve": "vite build && vite preview",
     "tw-watch": "npx tailwindcss -i ./tailwind-directives.css -o ./src/tailwind.css --watch --minify",
     "tw-build": "npx tailwindcss -o ./src/build.css --minify",
     "format": "npx prettier --write"
